[package]
name = "pager-rs"
version = "0.3.0"
authors = ["Burhan Keten <ketenburhan@protonmail.com>"]
edition = "2021"
description = "Cross-platform, customizable terminal pager library for rust."
repository = "https://github.com/ketenburhan/pager-rs"
license = "MIT"
keywords = ["terminal", "tui", "library"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/pager-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
textwrap = "0.16"
